Added logic for user activation from backend
